alignment fixes

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,15 @@
     max-width: 1100px;
 }
 
+main {
+    scroll-snap-type: y mandatory;
+}
+
+section {
+    scroll-snap-align: start;
+    /* scroll-snap-stop: normal; */
+}
+
 /* svg icon code */
 /* -----
 SVG Icons - svgicons.sparkk.fr
@@ -326,7 +335,7 @@ button[type="submit"] {
 }
 
 /* responsive media controls */
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 768px) {
     .nav-list {
         flex-direction: column;
         top: 4rem;
